@@ -433,7 +433,8 @@ All.eq(log(1 - Pwilcox),   pwilcox  (Rwilcox, m = 13, n = 17, lower=F, log=T))
 ### (Extreme) tail tests added more recently:
 All.eq(1, -1e-17/ pexp(qexp(-1e-17, log=TRUE),log=TRUE))
 abs(pgamma(30,100, lower=FALSE, log=TRUE) + 7.3384686328784e-24) < 1e-36
-All.eq(1, pcauchy(-1e20) / 3.183098861837907e-21)
+All.eq(1, pcauchy(-1e20)           /  3.18309886183791e-21)
+All.eq(1, pcauchy(+1e15, log=TRUE) / -3.18309886183791e-16)
 for(x in 10^c(15,25,50,100,200))
     print(all.equal(pt(-x, df=1), pcauchy(-x), tol = 1e-15))
 
